- fixed menu doesn't show bug - fixed content view align bug - fixed content view menu bug
Former-commit-id: d7d08f5a5c2ecaf40cfc5c5c8a76e2e7c1e458cc [formerly 5a8bd94b61619768ee408e4f8605414c78635277 [formerly 59aa48c53a2cecce1e8fcc9bcde8966dc449016b]]
Former-commit-id: 318d90e0b0ada113dcea6c294e460cd1c3acae43
Former-commit-id: 2aa60d714a4578cc0bc745cb084868cafdb875e7

--- a/stylesheets/ui.scss
+++ b/stylesheets/ui.scss
@@ -9,12 +9,16 @@ nav#menu {
   .logo {
     height: 120px !important;
     background: url("/images/logo.png") no-repeat center center;
-    text-indent: -1000000px;
+//    text-indent: -1000000px;
+    a {
+      margin-left: -25px;
+      height: 120px;
+      width: 220px;
+    }
   }
   
   .navigation {
     li {
-      
       font-size: 16px;
       font-family: "HelveticaNeue-Light";
       letter-spacing: 0.8px;
@@ -24,7 +28,6 @@ nav#menu {
       padding: 0 25px;
       border-top: 1px solid #1e2020;
       border-bottom: 1px solid #000;
-      
     }
     
     a {
@@ -37,17 +40,15 @@ nav#menu {
       border-top: 1px solid #f48080;
     }
     
-    li.active:active {
-      background: #f04f4f;
-      border-bottom: 1px solid #f48080;
-      border-top: 1px solid #000;
-    }
+//    li.active:active {
+//      background: #f04f4f;
+//      border-bottom: 1px solid #f48080;
+//      border-top: 1px solid #000;
+//    }
     
     li.user {
       
     }
-    
-
   }
 }
 //------ ui/toolbar
